# ft_linear_regression

./: Cargo.toml  README.md
ressources/: save.csv
src/: prediction.rs  training.rs
src/tools/: csv.rs  dataset.rs  display.rs  math.rs  mod.rs
